[package]
name = "fan"
authors = [
    "Daniel Cormier",
]
version = "0.1.0"
edition = "2021"
description = "Simplifys fanning-out (and eventually -in) with channels"
documentation = "https://docs.rs/fan/"
repository = "https://github.com/dcormier/fan-rs"
license= "Apache-2.0"
exclude = [
    "check.sh"
]
keywords = []
categories = []

[dependencies]
tokio = { version = "1", default_features = false, features = ["sync"], optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", default_features = false, features = ["rt", "macros", "time"] }

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:futures"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true
